Replace URL with URI since 'bolt' was not recognized